--- a/browsers/PythonQT5/Templates/classes/WPComputeSystem.html
+++ b/browsers/PythonQT5/Templates/classes/WPComputeSystem.html
@@ -20,34 +20,13 @@
     {% endif %}
 
     <div class="grid">
-      <div class="key">Identifier</div>
-      <div class="mono">{{ obj.id }}</div>
 
       {% if obj.kburl %}
         <div class="key">Knowledge Base</div>
-        <div><a href="{{ obj.kburl }}">{{ obj.kburl }}</a></div>
+        <div><a id="kb-link" href="{{ obj.kburl }}">{{ obj.kburl }}</a></div>
       {% endif %}
 
-      {% if obj.objects is defined %}
-        <div class="key">Contained objects</div>
-        <div class="mono">{{ obj.objects }}</div>
-      {% endif %}
     </div>
 
-    {% if obj.openaction %}
-      <div class="section">
-        <h2>Open Actions</h2>
-        <pre class="mono">{{ json.dumps(obj.openaction, ensure_ascii=False, indent=2) }}</pre>
-      </div>
-    {% endif %}
-
-    {% if obj.contextmenu %}
-      <div class="section">
-        <h2>Context Menu</h2>
-        <pre class="mono">{{ json.dumps(obj.contextmenu, ensure_ascii=False, indent=2) }}</pre>
-      </div>
-    {% endif %}
   </body>
   </html>
-
-
